// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/riw/db/transform/arStatusByLidFromQuadAr 01 1`] = `
Object {
  "default": Array [],
  "locale": Object {},
}
`;

exports[`lib/riw/db/transform/arStatusByLidFromQuadAr 02 1`] = `
Object {
  "default": Array [
    Array [
      "one",
      "desc1",
    ],
    Array [
      "two",
      "desc1",
    ],
  ],
  "locale": Object {
    "aa-aa": Object {
      "has": Array [
        Array [
          "one",
          "desc1",
        ],
        Array [
          "two",
          "desc1",
        ],
      ],
      "missing": Array [],
    },
  },
}
`;

exports[`lib/riw/db/transform/arStatusByLidFromQuadAr 03 1`] = `
Object {
  "default": Array [
    Array [
      "one",
      "desc1",
    ],
  ],
  "locale": Object {
    "aa-aa": Object {
      "has": Array [
        Array [
          "one",
          "desc1",
        ],
      ],
      "missing": Array [],
    },
    "bb-bb": Object {
      "has": Array [
        Array [
          "one",
          "desc1",
        ],
      ],
      "missing": Array [],
    },
  },
}
`;

exports[`lib/riw/db/transform/arStatusByLidFromQuadAr 04 1`] = `
Object {
  "default": Array [
    Array [
      "one",
      "desc1",
    ],
    Array [
      "one",
      "desc2",
    ],
    Array [
      "two",
      "desc1",
    ],
    Array [
      "three",
      "desc1",
    ],
  ],
  "locale": Object {
    "aa-aa": Object {
      "has": Array [
        Array [
          "one",
          "desc1",
        ],
      ],
      "missing": Array [
        Array [
          "one",
          "desc2",
        ],
        Array [
          "two",
          "desc1",
        ],
        Array [
          "three",
          "desc1",
        ],
      ],
    },
    "bb-bb": Object {
      "has": Array [
        Array [
          "one",
          "desc1",
        ],
        Array [
          "one",
          "desc2",
        ],
        Array [
          "two",
          "desc1",
        ],
        Array [
          "three",
          "desc1",
        ],
      ],
      "missing": Array [],
    },
    "cc-cc": Object {
      "has": Array [
        Array [
          "three",
          "desc1",
        ],
      ],
      "missing": Array [
        Array [
          "one",
          "desc1",
        ],
        Array [
          "one",
          "desc2",
        ],
        Array [
          "two",
          "desc1",
        ],
      ],
    },
  },
}
`;
